--- a/public/style_login.css
+++ b/public/style_login.css
@@ -18,11 +18,12 @@ body{
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #93F9B9, #1D976C); 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 650px;
+}
+    /* height: 650px;
     display: flex;
     justify-content: center;
-}
-
+} */
+/* 
 header{
     display: block;
 }
@@ -124,16 +125,16 @@ input:focus~label, input:valid~label{
 }
 input:focus~.barra::before{
     width: 100%;
-}
+} */
 
-.regi{
+/* .regi{
     font-family: 'Roboto';
     background: #1D976C;  
-    /* fallback for old browsers */
+    /* fallback for old browsers 
     background: -webkit-linear-gradient(to right, #93F9B9, #1D976C);  
-    /* Chrome 10-25, Safari 5.1-6 */
+    /* Chrome 10-25, Safari 5.1-6 
     background: linear-gradient(to right, #93F9B9, #1D976C); 
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ 
     border: none;
     display: block;
     width: 80%;
@@ -142,7 +143,7 @@ input:focus~.barra::before{
     height: 40px;
     font-size: 16px;
     cursor: pointer;
-}
+} 
 
 .regre{
     width: 10px 10px;
